# transformers

./: .gitignore  pyproject.toml
examples/flax/language-modeling/: run_t5_mlm_flax.py
src/transformers/: __init__.py
src/transformers/commands/: convert.py
src/transformers/models/: __init__.py
src/transformers/models/mt5/: __init__.py  modeling_flax_mt5.py  modeling_tf_mt5.py
tests/models/auto/: test_modeling_auto.py  test_modeling_tf_auto.py  test_modeling_tf_pytorch.py
tests/models/mt5/: test_modeling_flax_mt5.py
tests/models/t5/: test_modeling_flax_t5.py  test_modeling_t5.py
